# DevOps-Core-Course

./: .gitignore  README.md
.github/workflows/: ansible-deploy.yml  docker-build-check.yml  docker-release.yml  python-ci.yml  terraform-ci.yml
project/: .editorconfig  .gitignore
project/ansible/: .ansible-lint  .gitignore  ansible.cfg
project/ansible/group_vars/: all.yml
project/ansible/inventory/: hosts.ini
project/ansible/playbooks/: deploy.yml  provision.yml  site.yml
project/app_python/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
project/app_python/app/: __main__.py  app.py  helpers.py  logging_config.py  metrics.py  settings.py  visits.py
project/app_python/docs/: LAB01.md  LAB02.md  LAB03.md
project/app_python/tests/: conftest.py  test_endpoints.py
project/app_zig/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  build.zig
project/app_zig/docs/: LAB01.md  LAB02.md  ZIG.md
project/app_zig/src/: main.zig
project/docs/: LAB04.md  LAB05.md  LAB06.md  LAB07.md  LAB08.md  LAB09.md  LAB10.md  LAB11.md  LAB12.md  LAB13.md
project/docs/screenshots/: README.md
project/k8s/: CONFIGMAPS.md  README.md  deployment-v2.yml  deployment.yml  ingress.yml  service-v2.yml  service.yml
project/monitoring/: .env.example  docker-compose.yaml
project/pulumi/: .gitignore  Pulumi.yaml  README.md  index.ts  package-lock.json  package.json  tsconfig.json
project/terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tf  variables.tf
(+40 files in other folders)
