[project]
name = "devops-python-service"
version = "0.1.0"
description = "Python service for DevOps Core Course"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
]
[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
